# aws-encryption-sdk

./: .gitignore  .gitmodules  .prettierignore  .releaserc.cjs  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SUPPORT_POLICY.rst  SharedMakefileV2.mk  project.properties  tempdiff.diff  test-permissions.md
AwsEncryptionSDK/runtimes/python/: README.md  pyproject.toml
AwsEncryptionSDK/runtimes/python/src/aws_encryption_sdk/: __init__.py
AwsEncryptionSDK/runtimes/python/test/internaldafny/: test_dafny_wrapper.py
AwsEncryptionSDK/runtimes/rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  copy_externs.sh  start_release.sh  test_published.sh
AwsEncryptionSDK/runtimes/rust/esdk_rust/: Cargo.toml  Makefile
AwsEncryptionSDK/runtimes/rust/esdk_rust/aws-esdk-cxx/: Cargo.toml  Makefile  main.cpp
AwsEncryptionSDK/runtimes/rust/esdk_rust/aws-esdk-cxx/src/: lib.rs
AwsEncryptionSDK/runtimes/rust/esdk_rust/aws_structured_encryption/: Cargo.toml
AwsEncryptionSDK/runtimes/rust/esdk_rust/aws_structured_encryption/src/: footer.rs  header.rs  paths.rs
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/: help.html  src-files.js
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/aws_esdk/: all.html  enum.ErrorKind.html  enum.MaterialSource.html  enum.NetV400RetryPolicy.html  fn.decrypt.html  fn.encrypt_stream.html  fn.mpl.html  struct.DecryptInput.html  struct.EncryptInput.html  struct.Error.html  struct.FrameLength.html
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/aws_mpl_primitives/: all.html  enum.DigestAlg.html  enum.EcdhCurveSpec.html  fn.constant_time_equal.html  fn.hkdf.html  fn.hkdf_no_salt.html  fn.hmac.html  sidebar-items.js  struct.DigestContext.html
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/aws_mpl_rs/: index.html  sidebar-items.js  struct.DecryptionMaterials.html  type.EncryptionContext.html
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/aws_structured_encryption/: enum.ErrorKind.html  enum.PathSegment.html  struct.AuthItem.html  struct.DecryptInput.html  struct.DecryptOutput.html  struct.EncryptInput.html  struct.Error.html  struct.ParsedHeader.html  struct.ResolveActionsInput.html  struct.ResolveActionsOutput.html  struct.StructuredDataTerminal.html
AwsEncryptionSDK/runtimes/rust/esdk_rust/docs/search.index/: 0132add3a639.js  03d65d1751d1.js  0b63b547438b.js  0c3c11953346.js  0c418d51fecf.js  0e58225a5f0e.js  117a51d274a8.js  157fb8250ce6.js  1bf0a688c2dc.js  1eb349add612.js  1fadd3489725.js  200ae14353a3.js  217c613742f7.js  2256d4105f28.js  2339b2e2c170.js  234ddab67180.js  251142a7082e.js  26c6972f493e.js  277588321c7f.js  2c2076f294cc.js  2c3d99f06a53.js  3252fa656d1d.js  32ec1cf43584.js  32fe2ace500d.js  3380ae66030b.js  338d6b90971b.js  33e5a13c7be9.js  352273bf6687.js  353910fdb3cf.js  3a398dd169e9.js  3e5178859d0f.js  3ef29cc76d08.js  3f74f35d6960.js  4591a9cc1787.js  4a5ee1e1786c.js  4aad736f85e7.js  4bd4c06a883d.js  4fde551ca835.js  55532f61a979.js  55f36330b52b.js  (+19 more)
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/: .gitignore  Cargo.toml  Makefile  specification
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/.duvet/: config.toml  snapshot.txt
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/examples/: README.md  limit_encrypted_data_keys_example.rs  main.rs  set_commitment_policy_example.rs  set_encryption_algorithm_suite_example.rs
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/src/: alloc.rs  decrypt.rs  encrypt.rs  encrypt_decrypt.rs  error.rs  esdk_operations.rs  key_derivation.rs  legacy.rs  legacy_compat.rs  lib.rs  materials.rs  message_body.rs  serialize.rs  test_vectors.rs  types.rs
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/test_vectors_java/: java_keys
AwsEncryptionSDK/runtimes/rust/esdk_rust/esdk/test_vectors_python/: decrypt_message.json
AwsEncryptionSDK/runtimes/rust/esdk_rust/mpl/: Cargo.toml  Makefile
AwsEncryptionSDK/runtimes/rust/esdk_rust/prim/: Cargo.toml  Makefile
AwsEncryptionSDK/runtimes/rust/examples/: README.md  limit_encrypted_data_keys_example.rs  main.rs  set_commitment_policy_example.rs  set_encryption_algorithm_suite_example.rs
AwsEncryptionSDK/runtimes/rust/examples/client_supplier/: client_supplier_example.rs  regional_role_client_supplier.rs  regional_role_client_supplier_config.rs
AwsEncryptionSDK/runtimes/rust/examples/example_utils/: utils.rs
AwsEncryptionSDK/runtimes/rust/examples/keyring/: aws_kms_discovery_keyring_example.rs  aws_kms_discovery_multi_keyring_example.rs  aws_kms_keyring_example.rs  aws_kms_mrk_discovery_keyring_example.rs  aws_kms_mrk_discovery_multi_keyring_example.rs  aws_kms_mrk_keyring_example.rs  aws_kms_mrk_multi_keyring_example.rs  aws_kms_multi_keyring_example.rs  aws_kms_rsa_keyring_example.rs  mod.rs  multi_keyring_example.rs  raw_aes_keyring_example.rs  raw_ecdh_keyring_example.rs  raw_rsa_keyring_example.rs
AwsEncryptionSDK/runtimes/rust/src/: README.md  lib.rs  operation.rs
AwsEncryptionSDK/runtimes/rust/test_examples/: Cargo.toml
TestVectors/runtimes/python/: pyproject.toml  tox.ini
TestVectors/runtimes/python/src/aws_encryption_sdk_test_vectors/: __init__.py
TestVectors/runtimes/python/test/internaldafny/: test_dafny_wrapper.py
TestVectors/runtimes/rust/: .gitignore  Cargo.toml  copy_externs.sh
TestVectors/runtimes/rust/src/: ecdsa.rs  get_test_directory.rs  main.rs  test_vec_dir.rs  wrapped.rs
TestVectors/runtimes/rust/src/wrapped/: client.rs
TestVectors/runtimes/rust/test/: manifest.json
esdk-performance-testing/benchmarks/c/: CMakeLists.txt  README.md  build.sh
esdk-performance-testing/benchmarks/c/src/: benchmark.c  benchmark.h  config.c  config.h  main.c  results.c  results.h  tests.c  tests.h
esdk-performance-testing/benchmarks/rust/: Cargo.toml  README.md
esdk-performance-testing/benchmarks/rust/src/: alloc.rs  benchmark.rs  config.rs  main.rs  results.rs  size_limit_smoke_test.rs  tests.rs
mpl/: Cargo.toml  Makefile
mpl/src/: cmc.rs  commitment.rs  keystore.rs
prim/: Cargo.toml  Makefile  README.md
prim/src/: ecdh.rs  hkdf.rs  memory_tracker.rs  use_memory_tracker.rs
(+2197 files in other folders)
