[package]
name = "aws-mpl-legacy"
version = "0.2.0"
edition = "2021"
keywords = ["cryptography", "security", "encryption"]
categories = ["cryptography"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "Native Rust MPL types wrapping the Dafny-transpiled MPL."
repository = "https://github.com/aws/aws-client-encryption-rust/aws-mpl-rs/"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-mpl-legacy"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
zeroize = "1.8.2"
aws-mpl-primitives = { path = "../prim" }
aws-mpl-dafny = { package = "aws-mpl-legacy", path = "../../../../../mpl/AwsCryptographicMaterialProviders/runtimes/rust" }
aws-sdk-kms = { version = "1.98.0", optional = true }
aws-sdk-dynamodb = { version = "1.103.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
     "--cfg", "docsrs",
]

[features]
# include keyrings that depend upon KMS
kms = ["aws-sdk-kms"]
# include keyrings that depend upon KMS or DynamoDB
ddb = ["kms", "aws-sdk-dynamodb"]
default = ["ddb"]
fips = ["aws-mpl-primitives/fips"]

