[package]
name = "aws-esdk"
version = "1.0.0"
edition = "2021"
rust-version = "1.81.0"
keywords = ["cryptography", "security", "dynamodb", "encryption", "client-side"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-esdk is a library for implementing client side encryption."
homepage = "https://docs.aws.amazon.com/encryption-sdk/latest/developer-guide/introduction.html"
repository = "https://github.com/aws/aws-encryption-sdk-dafny/releases/rust/esdk/"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk"
autoexamples = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.15"
aws-lc-rs = "=1.12.2"
aws-lc-sys = "=0.25.1"
aws-sdk-dynamodb = "1.62.0"
aws-sdk-kms = "1.57.0"
aws-smithy-runtime-api = {version = "1.7.3", features = ["client"] }
aws-smithy-types = "1.2.12"
chrono = "0.4.39"
cpu-time = "1.0.0"
dafny_runtime = { path = "../../../mpl/smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync","small-int"]}
dashmap = "6.1.0"
pem = "3.0.4"
rand = "0.9.0"
tokio = {version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }

[[example]]
name = "main"
