[package]
name = "aws-esdk-test-vectors"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
keywords = ["test-vectors", "testvectors", "test vectors", "esdk test vectors", "esdk dafny test vectors", "crypto", "cryptography", "security", "encryption", "client-side", "clientside"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-esdk-test-vectors is a library for testing aws-esdk."
homepage = "https://github.com/aws/aws-encryption-sdk-dafny"
repository = "https://github.com/aws/aws-encryption-sdk-dafny"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk"
autoexamples = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wrapped-client = []

[dependencies]
aws-config = "1.5.6"
aws-lc-rs = "1.9.0"
aws-lc-sys = "0.21.2"
aws-sdk-dynamodb = "1.47.0"
aws-sdk-kms = "1.44.0"
aws-smithy-runtime-api = {version = "1.7.2", features = ["client"] }
aws-smithy-types = "1.2.6"
chrono = "0.4.38"
dafny_runtime = { path = "../../../mpl/smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust"}
dashmap = "6.1.0"
pem = "3.0.4"
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
aws-esdk-test-vectors = { path = ".", features = ["wrapped-client"] }

[[bin]]
name = "test-vectors"
path = "src/main.rs"
