[package]
name = "aws-esdk-test-vectors"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
description = "aws-esdk-test-vectors is a library for testing aws-esdk."
authors = ["AWS-CryptoTools"]
autoexamples = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wrapped-client = []

[dependencies]
aws-config = "1.5.15"
aws-lc-rs = "1.12.2"
aws-lc-sys = "0.25.0"
aws-sdk-dynamodb = "1.62.0"
aws-sdk-kms = "1.57.0"
aws-smithy-runtime-api = {version = "1.7.3", features = ["client"] }
aws-smithy-types = "1.2.12"
chrono = "0.4.39"
cpu-time = "1.0.0"
#dafny-runtime = "0.1.1"
dafny_runtime = { path = "../../../mpl/smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync"]}
dashmap = "6.1.0"
pem = "3.0.4"
rand = "0.9.0"
tokio = {version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
aws-esdk-test-vectors = { path = ".", features = ["wrapped-client"] }

[[bin]]
name = "test-vectors"
path = "src/main.rs"
