[package]
name = "esdk-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esdk_benchmark"
path = "src/main.rs"

[dependencies]
# AWS Encryption SDK
aws-esdk = { path = "../../../AwsEncryptionSDK/runtimes/rust" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI and progress
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Statistics and benchmarking
hdrhistogram = "7.5"
rand = "0.8"

# System info
sysinfo = "0.30"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Memory profiling
memory-stats = "1.0"
stats_alloc = "0.1"

# Async utilities
futures = "0.3"

# Override AWS SDK versions to be compatible with Rust 1.85.0
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.73.0"
aws-sdk-kms = "1.67.0"
aws-sdk-sso = "1.69.0"
aws-sdk-ssooidc = "1.69.0"
aws-sdk-sts = "1.69.0"
aws-smithy-types = "1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
