[package]
name = "aws-esdk-cxx"
version = "0.1.0"
edition = "2024"
keywords = ["crypto", "cryptography", "security", "encryption", "c++"]
categories = ["cryptography", "external-ffi-bindings"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "C++ bindings for aws-mpl."
repository = "https://github.com/aws/aws-encryption-sdk-c/aws-mpl-cxx"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk-cxx"
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
aws-config = "1.8.12"
aws-mpl-legacy = "0.1.0"
aws-sdk-dynamodb = "1.103.0"
aws-sdk-kms = "1.98.0"
aws-smithy-types = "1.3.6"
cxx = "1.0.194"
tokio = {version = "1.49.0", features = ["full"] }
aws-esdk = { path = "../esdk" , features = ["legacy"]}
aws-mpl-rs = { path = "../mpl"}

[build-dependencies]
cxx-build = "1.0.194"
cc = "1.2.54"
