
[package]
name = "aws_structured_encryption"
version = "2.0.0"
edition = "2024"
keywords = ["cryptography", "security", "encryption", "database"]
categories = ["cryptography"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-db-esdk is a very nice crate."
repository = "https://github.com/aws/aws-client-encryption-rust/aws-db-esdk/"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-db-esdk"
readme = "README.md"
autoexamples = false
publish = false

[dependencies]
# tokio only needed for tests and test_vectors
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"], optional = true }
aws-mpl-primitives = { path = "../prim" }
aws-mpl-legacy = { path = "../mpl", default-features = false}

aws-smithy-types = { version = "1.3.6", optional = true }
aws-sdk-kms = "1.98.0"
aws-sdk-dynamodb = "1.103.0"
async-trait = "0.1.89"

# Necessary for examples
[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
pem = "3.0.6"
aws-config = "1.8.12"
aws-lc-rs = {version = "1.15.4"}
rand = "0.9.2"

# [[example]]
# name = "main"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
     "--cfg", "docsrs",
]

[features]
default = []
fips = ["aws-mpl-primitives/fips", "aws-mpl-legacy/fips"]
track = ["aws-mpl-primitives/track"]
