
[package]
name = "aws-esdk"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
aws-smithy-types = "1.3.4" # needed for error for legacy EDK Builder
# tokio only needed for tests and test_vectors
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"]  }
aws-mpl-primitives = { path = "../prim" }
aws-mpl-rs = { path = "../mpl", default-features = false}

clap = { version = "4.5.54", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }
base64 = { version = "0.22.1", optional = true }
aws-sdk-kms = { version = "1.97.0", optional = true }
aws-sdk-dynamodb = { version = "1.94.0", optional = true }
aws-config = { version = "1.8.12", optional = true }
aws-mpl-legacy = { version = "0.1.0", optional = true }
async-trait = "0.1.89"
serde_json = { version = "1.0.149", optional = true }

# Necessary for examples
[dev-dependencies]
pem = "3.0.6"
aws-config = "1.8.10"
aws-lc-rs = {version = "1.15.2"}
rand = "0.9.2"

[[example]]
name = "main"

[[bin]]
name = "test_vector"
path = "src/bin/test_vector/main.rs"
required-features = ["test_vectors"]  # Only build binary when test_vectors feature is enabled

[package.metadata.docs.rs]
all-features = true
# features = ["test_vectors"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
     "--cfg", "docsrs",
]

[features]
default = ["ddb"]
test_vectors = ["clap", "anyhow", "base64", "aws-config", "serde_json"] # without "kms" or "ddb", only processes raw keyrings
fips = ["aws-mpl-primitives/fips"]
kms = ["aws-mpl-rs/kms", "aws-sdk-kms"]
ddb = ["kms", "aws-mpl-rs/ddb", "aws-sdk-dynamodb"]
legacy = ["ddb", "aws-mpl-legacy", "tokio/full"]
