
[package]
name = "aws-esdk"
version = "2.0.0"
edition = "2024"
keywords = ["cryptography", "security", "encryption"]
categories = ["cryptography"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-mpl-rs is a very nice crate."
repository = "https://github.com/aws/aws-client-encryption-rust/aws-esdk/"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk"
readme = "README.md"
autoexamples = false

[dependencies]
# tokio only needed for tests and test_vectors
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"], optional = true }
aws-mpl-primitives = { path = "../prim" }
aws-mpl-rs = { path = "../mpl", default-features = false}

aws-smithy-types = { version = "1.3.6", optional = true }
clap = { version = "4.5.55", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }
base64 = { version = "0.22.1", optional = true }
aws-sdk-kms = { version = "1.98.0", optional = true }
aws-sdk-dynamodb = { version = "1.103.0", optional = true }
aws-config = { version = "1.8.12", optional = true }
aws-mpl-legacy = { version = "0.2.0", optional = true }
async-trait = "0.1.89"
serde_json = { version = "1.0.149", optional = true }

# Necessary for examples
[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
pem = "3.0.6"
aws-config = "1.8.12"
aws-lc-rs = {version = "1.15.4"}
rand = "0.9.2"

[[example]]
name = "main"

[[bin]]
name = "test_vector"
path = "src/bin/test_vector/main.rs"
required-features = ["test_vectors", "tokio"]  # Only build binary when test_vectors feature is enabled

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
     "--cfg", "docsrs",
]

[features]
default = ["ddb"]
test_vectors = ["clap", "anyhow", "base64", "aws-config", "serde_json"] # without "kms" or "ddb", only processes raw keyrings
quick_vectors = ["test_vectors", "legacy"]
fips = ["aws-mpl-primitives/fips", "aws-mpl-rs/fips"]
kms = ["aws-mpl-rs/kms", "aws-sdk-kms"]
ddb = ["kms", "aws-mpl-rs/ddb", "aws-sdk-dynamodb"]
legacy = ["aws-sdk-kms", "aws-sdk-dynamodb", "aws-mpl-legacy", "tokio/full", "aws-smithy-types"]
track = ["aws-mpl-primitives/track"]
