[package]
name = "aws-esdk"
version = "2.0.0"
edition = "2024"
keywords = ["cryptography", "security", "encryption"]
categories = ["cryptography"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-esdk is a very nice crate."
repository = "https://github.com/aws/aws-client-encryption-rust/aws-esdk/"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk"
readme = "README.md"
autoexamples = false

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }

aws-smithy-types = "1.3.6"
clap = { version = "4.5.55", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }
base64 = { version = "0.22.1", optional = true }
aws-sdk-kms = "1.98.0"
aws-sdk-dynamodb = "1.103.0"
aws-config = { version = "1.8.12", optional = true }
aws-mpl-legacy = { path = "../mpl" }
aws-lc-rs = { version = "1.15.4", default-features = false }
async-trait = "0.1.89"
serde_json = { version = "1.0.149", optional = true }
zeroize = "1.8.2"

# Necessary for examples
[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
pem = "3.0.6"
aws-config = "1.8.12"
aws-lc-rs = {version = "1.15.4"}
rand = "0.9.2"

[[example]]
name = "main"

[[bin]]
name = "test_vector"
path = "src/bin/test_vector/main.rs"
required-features = ["test_vectors"]  # Only build binary when test_vectors feature is enabled

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
     "--cfg", "docsrs",
]

[features]
default = ["aws-lc-rs/aws-lc-sys"]
test_vectors = ["clap", "anyhow", "base64", "aws-config", "serde_json"]
quick_vectors = ["test_vectors"]
fips = ["aws-lc-rs/fips"]
track = []
