[package]
name = "aws-mpl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
zeroize = "1.8.2"
aws-mpl-primitives = { path = "/Users/ajewell/esdk_rust/prim" }
derivative = "2.2.0"
aws-sdk-kms = { version = "1.97.0", optional = true }
aws-sdk-dynamodb = { version = "1.101.0", optional = true }

[features]
kms = ["aws-sdk-kms"]
ddb = ["kms", "aws-sdk-dynamodb"]
default = ["ddb"]
